--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,5 @@
 *.pth filter=lfs diff=lfs merge=lfs -text
+C:/Users/jakub/PycharmProjects/Car_Finder/Model/Weights/car_or_not_model.pth/ filter=lfs diff=lfs merge=lfs -text
+C:/Users/jakub/PycharmProjects/Car_Finder/Model/Weights/car_or_not_model.pth filter=lfs diff=lfs merge=lfs -text
+C:/Users/jakub/PycharmProjects/Car_Finder/Model/Weights/Final_Model.pth filter=lfs diff=lfs merge=lfs -text
+C:/Users/jakub/PycharmProjects/Car_Finder/Model/Weights/ResNet.pth filter=lfs diff=lfs merge=lfs -text
