Add to lfs to gitignore

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.isort]
-profile = "black"  # Integracja z Black
-line_length = 88   # Długość linii
+profile = "black"  
+line_length = 88  
 multi_line_output = 3
 include_trailing_comma = true
